# tofu

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/models/: monkey.fbx
assets/models/3d_other_ufnscjdga/: ufnscjdga_LOD0.mtl
assets/models/normal_test/: normal_test.mtl
assets/models/walther_01/: walther_01.fbx
assets/shaders/: basic.fs  basic.vs  copy.fs  copy.vs  gbuffer.fs
src/: main.rs  tofu.rs
src/tofu/: app.rs  camera.rs  framebuffer.rs  mesh.rs  model.rs  shader.rs  texture.rs
