[package]
name = "tofu"
version = "0.1.0"
authors = ["Hussein Taher <hussein_taher@outlook.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17.0"
gl = "0.14.0"
glfw = "0.37.0"
stb_image = "0.2.2"
#tobj = "2.0.1"
tobj = { git = "https://github.com/Husenap/tobj", branch = "lowercase_material_words" }
